Spacing fix

--- a/src/components/schedule/schedule.css
+++ b/src/components/schedule/schedule.css
@@ -33,6 +33,8 @@
   cursor: pointer;
   width: min-content;
   margin: 50px auto 50px;
+  font-weight: bold;
+  font-size: 14px;
 }
 
 #schedule-create-container button:hover {
@@ -44,7 +46,7 @@
 }
 
 #day-selector {
-  margin: auto;
+  margin: auto auto 30px;
   display: flex;
   align-items: center;
 }
@@ -68,10 +70,15 @@
   overflow: hidden;
   margin: 10px auto;
   border: 2px solid #6029a1;
+  height: 60px;
 }
 
 .hours-container > :not(:last-child) {
   border-right: 2px solid #6029a1;
+}
+
+.hours-container p {
+  margin: auto;
 }
 
 .hours-container p:first-child {
